tests/toy/neg/001476_mutation.toylang
program a = { var a : while int; } .
